fixed modal padding on small screen

--- a/FrontEnd/src/styles/index.css
+++ b/FrontEnd/src/styles/index.css
@@ -3,3 +3,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .p-modal {
+        padding-top: 55%;
+    }
+}
